# finhelper_backend

./: .dockerignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
agent/: endpoints.py
agent/utils/: llm_agent.py
auth/: endpoints.py
auth/utils/: password.py
core/: config.py  database.py  models.py
finances/: endpoints.py
migrations/: env.py
migrations/versions/: 017ebe7c6426_migration_3.py  4a0081b801af_update_fields.py  581516c0d666_initial.py  7ba2114f666e_migration_4.py  7e8b4173be42_initial.py  85cf026a6311_add_ondelete_for_foreign_key.py  939996e1c24a_initial_migration.py  98eaab43507d_migration_2.py  eb46fe0f0f70_initial.py
