[project]
name = "finhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "sqlmodel>=0.0.38",
]
