[project]
name = "finhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "ruff>=0.15.17",
    "sqlmodel>=0.0.38",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations/"
]
